--- a/src/app/modules/core/header/header.component.html
+++ b/src/app/modules/core/header/header.component.html
@@ -7,5 +7,16 @@
     </div>
 </p-sidebar>
 
+<div style="background-color: aquamarine; padding: 10px;">
+    <div class="row">
+        <div class="col-md-6" style="text-align: left;">
+            <p-button type="button"  class="mr-2" (click)="visibleSidebar1 = true" label="Menu"></p-button>    
+        </div>
+        <div class="col-md-6" style="text-align: right;">
+            Julio Jairo Cumpa Espinoza
+        </div>
+    </div>
 
-<p-button type="button" class="mr-2" (click)="visibleSidebar1 = true" label="Menu"></p-button>
+    
+</div>
+
