--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,12 +1,26 @@
-<h3>Easy to show an echarts: </h3>
-<div echarts [options]="options" class="chart"></div>
 
-<div class="field col-12 md:col-4">
-    <h5>Publicados</h5>
-    <p-knob [(ngModel)]="value2" [readonly]="true"></p-knob>
-</div>
+<h3 style="text-align: center;">Graficos Apache echarts</h3>
 
-<div class="field col-12 md:col-4">
-    <h5>Genero Autores</h5>
-    <p-knob [(ngModel)]="value2" [readonly]="true"></p-knob>
-</div>
+
+<div echarts [options]="options" [merge]="mergeOptions" class="chart"></div>
+
+    
+
+
+    <div class="d-flex justify-content-center">
+        <div class="p-4">
+            <div class="field col-12 md:col-4">
+                <h5>Publicados</h5>
+                <p-knob [(ngModel)]="cantidadPublicado" [readonly]="true"></p-knob>
+            </div>
+        </div>
+        <div class="p-4">
+            <div class="field col-12 md:col-4">
+                <h5>Autores</h5>
+                <p-knob [(ngModel)]="cantidadAutor" [readonly]="true"></p-knob>
+            </div>
+        </div>
+        
+      </div>
+
+
