--- a/src/app/modules/libros/libros.component.html
+++ b/src/app/modules/libros/libros.component.html
@@ -1,6 +1,6 @@
 <p-toast></p-toast>
 <div class="d-flex justify-content-center">
-    <p-card header="Nuevo Libro" [style]="{'width': '30rem', 'margin-bottom': '2em'}">
+    <p-card header="{{titulo}}" [style]="{'width': '30rem', 'margin-bottom': '2em'}">
         <div class="d-flex flex-column" [formGroup]="createLibro">
             <div class="p-2">
                 <label>Título</label><br/>
@@ -13,7 +13,7 @@
             <div class="d-flex flex-row">
                 <div class="p-2">
                     <label>Autor</label><br/>
-                    <input type="text" pInputText formControlName="idautor"/>
+                    <p-autoComplete  formControlName="autor" [showEmptyMessage]="true" [suggestions]="filteredCountries" (completeMethod)="filterCountry($event)" field="nombre" [minLength]="1"></p-autoComplete>
                 </div>
                 <div class="p-2">
                     <p-button label="Nuevo Autor" (click)="showDialog()"></p-button>
@@ -22,7 +22,7 @@
             <div class="d-flex flex-row">
                 <div class="p-2">
                     <label>Publicado</label><br/>
-                    <p-checkbox [(ngModel)]="checked" [binary]="true" inputId="binary" formControlName="publicado"></p-checkbox>
+                    <p-checkbox [binary]="true" inputId="binary" formControlName="publicado"></p-checkbox>
                 </div>
                 <div class="p-2">
                     <label>Año</label><br/>
@@ -31,7 +31,7 @@
             </div>
             <div class="d-flex flex-row">
                 <div class="p-2">
-                    <p-button label="Aceptar" (click)="agregaLibro()"></p-button>
+                    <p-button label="Aceptar" (click)="agregarxeditarLibro()"></p-button>
                 </div>
                 <div class="p-2">
                     <p-button label="Cancelar" (click)="cancelarLibro()"></p-button>
