--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 
-<h3 style="text-align: center;">Graficos Apache echarts</h3>
+<h3 style="text-align: center;font-family: Arial, Helvetica, sans-serif;">Graficos Apache echarts</h3>
 
 
 <div echarts [options]="options" [merge]="mergeOptions" class="chart"></div>
@@ -10,13 +10,13 @@
     <div class="d-flex justify-content-center">
         <div class="p-4">
             <div class="field col-12 md:col-4">
-                <h5>Publicados</h5>
+                <h5  style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Publicados</h5>
                 <p-knob [(ngModel)]="cantidadPublicado" [readonly]="true"></p-knob>
             </div>
         </div>
         <div class="p-4">
             <div class="field col-12 md:col-4">
-                <h5>Autores</h5>
+                <h5 style="text-align: center; font-family: Arial, Helvetica, sans-serif;">Autores</h5>
                 <p-knob [(ngModel)]="cantidadAutor" [readonly]="true"></p-knob>
             </div>
         </div>
